sIBL_GUI - 2.0.5 - Change Log -
- Collection Thumbnails Code Is Checking For Thumbnails File Formate, And Using A Default Picture If File Format Is Not Supported.

--- a/src/sIBL_GUI.qrc
+++ b/src/sIBL_GUI.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="sIBL_GUI" >
+    <file>Resources/Thumbnails_Format_Not_Supported_Yet.png</file>
     <file>Resources/sIBL_GUI_SpashScreen.png</file>
     <file>Resources/Grid_Background.png</file>
     <file>Resources/Marker.png</file>
