--- a/src/UI/sIBL_GUI.ui
+++ b/src/UI/sIBL_GUI.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>658</width>
-    <height>742</height>
+    <height>747</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -146,7 +146,7 @@
                 <x>0</x>
                 <y>0</y>
                 <width>596</width>
-                <height>245</height>
+                <height>250</height>
                </rect>
               </property>
               <attribute name="label" >
@@ -186,7 +186,7 @@
                 <x>0</x>
                 <y>0</y>
                 <width>596</width>
-                <height>245</height>
+                <height>250</height>
                </rect>
               </property>
               <property name="statusTip" >
@@ -299,7 +299,7 @@
                    <x>0</x>
                    <y>0</y>
                    <width>256</width>
-                   <height>162</height>
+                   <height>139</height>
                   </rect>
                  </property>
                  <property name="statusTip" >
@@ -332,7 +332,7 @@
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>84</width>
+                   <width>96</width>
                    <height>61</height>
                   </rect>
                  </property>
@@ -357,6 +357,195 @@
                     <property name="cornerButtonEnabled" >
                      <bool>false</bool>
                     </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </widget>
+                <widget class="QWidget" name="ReWire_page" >
+                 <property name="geometry" >
+                  <rect>
+                   <x>0</x>
+                   <y>0</y>
+                   <width>224</width>
+                   <height>240</height>
+                  </rect>
+                 </property>
+                 <attribute name="label" >
+                  <string>ReWire Components</string>
+                 </attribute>
+                 <layout class="QGridLayout" name="ReWire_gridLayout" >
+                  <item row="1" column="0" >
+                   <widget class="QGroupBox" name="Lighting_groupBox" >
+                    <property name="title" >
+                     <string>Lighting</string>
+                    </property>
+                    <property name="alignment" >
+                     <set>Qt::AlignCenter</set>
+                    </property>
+                    <property name="flat" >
+                     <bool>true</bool>
+                    </property>
+                    <layout class="QGridLayout" name="Lighting_gridLayout" >
+                     <property name="leftMargin" >
+                      <number>0</number>
+                     </property>
+                     <property name="topMargin" >
+                      <number>4</number>
+                     </property>
+                     <property name="rightMargin" >
+                      <number>0</number>
+                     </property>
+                     <property name="bottomMargin" >
+                      <number>0</number>
+                     </property>
+                     <item row="0" column="0" >
+                      <widget class="QLabel" name="Lighting_label" >
+                       <property name="text" >
+                        <string>ReWire To :</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="0" column="1" >
+                      <widget class="QComboBox" name="Lighting_comboBox" />
+                     </item>
+                     <item row="1" column="0" colspan="2" >
+                      <layout class="QHBoxLayout" name="Lighting_horizontalLayout" >
+                       <item>
+                        <widget class="QLineEdit" name="Lighting_Path_lineEdit" >
+                         <property name="statusTip" >
+                          <string>sIBL Edit Path LineEdit : sIBL Edit Path.</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <widget class="QToolButton" name="Lighting_Path_toolButton" >
+                         <property name="text" >
+                          <string>...</string>
+                         </property>
+                         <property name="popupMode" >
+                          <enum>QToolButton::DelayedPopup</enum>
+                         </property>
+                        </widget>
+                       </item>
+                      </layout>
+                     </item>
+                    </layout>
+                   </widget>
+                  </item>
+                  <item row="3" column="0" >
+                   <widget class="QGroupBox" name="Reflection_groupBox" >
+                    <property name="title" >
+                     <string>Reflection</string>
+                    </property>
+                    <property name="alignment" >
+                     <set>Qt::AlignCenter</set>
+                    </property>
+                    <property name="flat" >
+                     <bool>true</bool>
+                    </property>
+                    <layout class="QGridLayout" name="Reflection_gridLayout" >
+                     <property name="leftMargin" >
+                      <number>0</number>
+                     </property>
+                     <property name="topMargin" >
+                      <number>4</number>
+                     </property>
+                     <property name="rightMargin" >
+                      <number>0</number>
+                     </property>
+                     <property name="bottomMargin" >
+                      <number>0</number>
+                     </property>
+                     <item row="0" column="0" >
+                      <widget class="QLabel" name="Reflection_label" >
+                       <property name="text" >
+                        <string>ReWire To :</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="0" column="1" >
+                      <widget class="QComboBox" name="Reflection_comboBox" />
+                     </item>
+                     <item row="1" column="0" colspan="2" >
+                      <layout class="QHBoxLayout" name="Reflection_horizontalLayout" >
+                       <item>
+                        <widget class="QLineEdit" name="Reflection_Path_lineEdit" >
+                         <property name="statusTip" >
+                          <string>sIBL Edit Path LineEdit : sIBL Edit Path.</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <widget class="QToolButton" name="Reflection_Path_toolButton" >
+                         <property name="text" >
+                          <string>...</string>
+                         </property>
+                         <property name="popupMode" >
+                          <enum>QToolButton::DelayedPopup</enum>
+                         </property>
+                        </widget>
+                       </item>
+                      </layout>
+                     </item>
+                    </layout>
+                   </widget>
+                  </item>
+                  <item row="0" column="0" >
+                   <widget class="QGroupBox" name="Background_groupBox" >
+                    <property name="title" >
+                     <string>Background</string>
+                    </property>
+                    <property name="alignment" >
+                     <set>Qt::AlignCenter</set>
+                    </property>
+                    <property name="flat" >
+                     <bool>true</bool>
+                    </property>
+                    <layout class="QGridLayout" name="Background_gridLayout" >
+                     <property name="leftMargin" >
+                      <number>0</number>
+                     </property>
+                     <property name="topMargin" >
+                      <number>4</number>
+                     </property>
+                     <property name="rightMargin" >
+                      <number>0</number>
+                     </property>
+                     <property name="bottomMargin" >
+                      <number>0</number>
+                     </property>
+                     <item row="0" column="0" >
+                      <widget class="QLabel" name="Background_label" >
+                       <property name="text" >
+                        <string>ReWire To :</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="0" column="1" >
+                      <widget class="QComboBox" name="Background_comboBox" />
+                     </item>
+                     <item row="1" column="0" colspan="2" >
+                      <layout class="QHBoxLayout" name="Background_horizontalLayout" >
+                       <item>
+                        <widget class="QLineEdit" name="Background_Path_lineEdit" >
+                         <property name="statusTip" >
+                          <string>sIBL Edit Path LineEdit : sIBL Edit Path.</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <widget class="QToolButton" name="Background_Path_toolButton" >
+                         <property name="text" >
+                          <string>...</string>
+                         </property>
+                         <property name="popupMode" >
+                          <enum>QToolButton::DelayedPopup</enum>
+                         </property>
+                        </widget>
+                       </item>
+                      </layout>
+                     </item>
+                    </layout>
                    </widget>
                   </item>
                  </layout>
@@ -1089,7 +1278,7 @@
              <x>0</x>
              <y>0</y>
              <width>618</width>
-             <height>287</height>
+             <height>292</height>
             </rect>
            </property>
            <attribute name="label" >
@@ -1861,6 +2050,13 @@
         <string>About</string>
        </attribute>
        <layout class="QGridLayout" name="About_tab_gridLayout" >
+        <item row="1" column="0" >
+         <widget class="QLabel" name="About_label" >
+          <property name="openExternalLinks" >
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
         <item row="0" column="0" >
          <spacer name="Top_verticalSpacer" >
           <property name="orientation" >
@@ -1873,13 +2069,6 @@
            </size>
           </property>
          </spacer>
-        </item>
-        <item row="1" column="0" >
-         <widget class="QLabel" name="About_label" >
-          <property name="openExternalLinks" >
-           <bool>true</bool>
-          </property>
-         </widget>
         </item>
         <item row="2" column="0" >
          <spacer name="Bottom_verticalSpacer" >
@@ -1966,6 +2155,8 @@
   </customwidget>
  </customwidgets>
  <resources>
+  <include location="../sIBL_GUI.qrc" />
+  <include location="../sIBL_GUI.qrc" />
   <include location="../sIBL_GUI.qrc" />
   <include location="../sIBL_GUI.qrc" />
   <include location="../sIBL_GUI.qrc" />
