--- a/src/UI/sIBL_GUI_FTP.ui
+++ b/src/UI/sIBL_GUI_FTP.ui
@@ -1,22 +1,31 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>sIBL_GUI_FTP_Form</class>
- <widget class="QWidget" name="sIBL_GUI_FTP_Form" >
-  <property name="windowTitle" >
+ <widget class="QWidget" name="sIBL_GUI_FTP_Form">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>394</width>
+    <height>245</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
    <string>sIBL_GUI FTP</string>
   </property>
-  <property name="windowIcon" >
-   <iconset resource="../sIBL_GUI_FTP.qrc" >
+  <property name="windowIcon">
+   <iconset resource="../sIBL_GUI_FTP.qrc">
     <normaloff>:/sIBL_GUI FTP/Resources/Icon_Light.png</normaloff>:/sIBL_GUI FTP/Resources/Icon_Light.png</iconset>
   </property>
-  <layout class="QGridLayout" name="sIBL_GUI_FTP_Form_gridLayout" >
-   <item row="0" column="0" >
-    <layout class="QHBoxLayout" name="Logo_horizontalLayout" >
+  <layout class="QGridLayout" name="sIBL_GUI_FTP_Form_gridLayout">
+   <item row="0" column="0">
+    <layout class="QHBoxLayout" name="Logo_horizontalLayout">
      <item>
-      <spacer name="Logo_Left_horizontalSpacer" >
-       <property name="orientation" >
+      <spacer name="Logo_Left_horizontalSpacer">
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -25,21 +34,21 @@
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="Logo_label" >
-       <property name="text" >
+      <widget class="QLabel" name="Logo_label">
+       <property name="text">
         <string/>
        </property>
-       <property name="pixmap" >
-        <pixmap resource="../sIBL_GUI_FTP.qrc" >:/sIBL_GUI FTP/Resources/sIBL_GUI_Small_Logo.png</pixmap>
+       <property name="pixmap">
+        <pixmap resource="../sIBL_GUI_FTP.qrc">:/sIBL_GUI FTP/Resources/sIBL_GUI_Small_Logo.png</pixmap>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="Logo_Right_horizontalSpacer" >
-       <property name="orientation" >
+      <spacer name="Logo_Right_horizontalSpacer">
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -49,21 +58,21 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="0" >
-    <widget class="QGroupBox" name="Online_Repository_groupBox" >
-     <property name="title" >
+   <item row="1" column="0">
+    <widget class="QGroupBox" name="Online_Repository_groupBox">
+     <property name="title">
       <string>sIBL GUI - Online Repository</string>
      </property>
-     <property name="alignment" >
+     <property name="alignment">
       <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
      </property>
-     <layout class="QGridLayout" name="Online_Repository_groupBox_gridLayout" >
-      <item row="0" column="0" >
-       <widget class="QLabel" name="Current_File_label" />
+     <layout class="QGridLayout" name="Online_Repository_groupBox_gridLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="Current_File_label"/>
       </item>
-      <item row="1" column="0" >
-       <widget class="QProgressBar" name="Download_progressBar" >
-        <property name="value" >
+      <item row="1" column="0">
+       <widget class="QProgressBar" name="Download_progressBar">
+        <property name="value">
          <number>24</number>
         </property>
        </widget>
@@ -71,14 +80,14 @@
      </layout>
     </widget>
    </item>
-   <item row="3" column="0" >
-    <layout class="QHBoxLayout" name="Buttons_horizontalLayout" >
+   <item row="3" column="0">
+    <layout class="QHBoxLayout" name="Buttons_horizontalLayout">
      <item>
-      <spacer name="Buttons_horizontalSpacer" >
-       <property name="orientation" >
+      <spacer name="Buttons_horizontalSpacer">
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -87,18 +96,11 @@
       </spacer>
      </item>
      <item>
-      <widget class="QGroupBox" name="Buttons_groupBox" >
-       <layout class="QGridLayout" name="Buttons_gridLayout" >
-        <item row="0" column="0" >
-         <widget class="QPushButton" name="Start_Download_pushButton" >
-          <property name="text" >
-           <string>Start Download</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1" >
-         <widget class="QPushButton" name="Cancel_pushButton" >
-          <property name="text" >
+      <widget class="QGroupBox" name="Buttons_groupBox">
+       <layout class="QGridLayout" name="Buttons_gridLayout">
+        <item row="0" column="0">
+         <widget class="QPushButton" name="Cancel_pushButton">
+          <property name="text">
            <string>Cancel</string>
           </property>
          </widget>
@@ -108,12 +110,12 @@
      </item>
     </layout>
    </item>
-   <item row="2" column="0" >
-    <spacer name="verticalSpacer" >
-     <property name="orientation" >
+   <item row="2" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeHint" stdset="0" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
        <height>40</height>
@@ -124,11 +126,11 @@
   </layout>
  </widget>
  <resources>
-  <include location="../sIBL_GUI_FTP.qrc" />
-  <include location="../sIBL_GUI_FTP.qrc" />
-  <include location="../sIBL_GUI_FTP.qrc" />
-  <include location="../sIBL_GUI_FTP.qrc" />
-  <include location="../sIBL_GUI_FTP.qrc" />
+  <include location="../sIBL_GUI_FTP.qrc"/>
+  <include location="../sIBL_GUI_FTP.qrc"/>
+  <include location="../sIBL_GUI_FTP.qrc"/>
+  <include location="../sIBL_GUI_FTP.qrc"/>
+  <include location="../sIBL_GUI_FTP.qrc"/>
  </resources>
  <connections/>
 </ui>
